--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,8 @@ p {
 /* --------------------HEADER--------------- */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -81,6 +83,22 @@ p {
   color: #2e2f42;
   padding: 24px 0;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link.current {
+  position: relative;
+}
+
+.header-menu-link.current::after {
+  content: "";
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
 }
 
 .address {
@@ -104,12 +122,14 @@ p {
   color: #434455;
   display: block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus,
 .header-address-link:hover,
-.header-address-link:focus {
+.header-address-link:focus,
+.header-menu-link.current {
   color: #404bbf;
 }
 
