--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ p {
 }
 
 .header-menu-link {
+  position: relative;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -86,11 +87,11 @@ p {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-link.current {
-  position: relative;
-}
+/* .header-menu-link.current {
+ position: relative;
+}" */
 
-.header-menu-link.current::after {
+.header-menu-link::after {
   content: "";
   border-radius: 2px;
   position: absolute;
@@ -99,6 +100,14 @@ p {
   width: 100%;
   height: 4px;
   background-color: #404bbf;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover:after,
+.header-menu-link:focus:after,
+.header-menu-link.current::after {
+  opacity: 1;
 }
 
 .address {
@@ -137,6 +146,15 @@ p {
 
 .hero {
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero\ image.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 188px 0;
 }
 
@@ -198,6 +216,23 @@ p {
   flex-basis: calc((100% - 72px) / 4);
 }
 
+.features-item-container {
+  width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background: #f4f4fd;
+  margin-bottom: 8px;
+}
+
+.features-item-icon {
+  width: 64px;
+  height: 64px;
+  margin: 0 auto;
+  margin-top: 24px;
+  margin-left: 100px;
+}
+
 .features-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -241,7 +276,9 @@ p {
 }
 
 .team-image-container {
-  padding: 32px 0;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  padding: 32px 16px;
 }
 
 .team-image {
@@ -264,6 +301,30 @@ p {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 8px;
+}
+
+.team-soc-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-soc-item {
+}
+
+.team-soc-link {
+  display: flex;
+  gap: 24px;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-soc-icon {
+  fill: #f4f4fd;
 }
 
 .portfolio {
@@ -292,6 +353,10 @@ p {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-item:hover .cover-text {
+  transform: translateY(0);
+}
+
 .portfolio-item-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -300,6 +365,26 @@ p {
 
 .portfolio-image {
   display: block;
+}
+
+.cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.cover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 40px 32px 164px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background: #4d5ae5;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms;
 }
 
 .portfolio-subtitle {
@@ -346,4 +431,40 @@ p {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-social-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-text-social {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-soc-item {
+}
+.footer-soc-link {
+  display: flex;
+  gap: 24px;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-icon {
+  fill: #f4f4fd;
 }
