--- a/css/styles.css
+++ b/css/styles.css
@@ -150,9 +150,10 @@ p {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero\ image.jpg);
+    url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   max-width: 1440px;
   margin: 0 auto;
   padding: 188px 0;
@@ -183,6 +184,7 @@ p {
   min-width: 169px;
   min-height: 56px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -217,6 +219,9 @@ p {
 }
 
 .features-item-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 264px;
   height: 112px;
   border: 1px solid #8e8f99;
@@ -229,8 +234,6 @@ p {
   width: 64px;
   height: 64px;
   margin: 0 auto;
-  margin-top: 24px;
-  margin-left: 100px;
 }
 
 .features-subtitle {
@@ -273,12 +276,12 @@ p {
   background: #fff;
   border-radius: 0 0 4px 4px;
   width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-image-container {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-image {
@@ -307,6 +310,7 @@ p {
 .team-soc-list {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 .team-soc-item {
@@ -321,6 +325,12 @@ p {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: #404bbf;
 }
 
 .team-soc-icon {
@@ -355,12 +365,15 @@ p {
 
 .portfolio-item:hover .cover-text {
   transform: translateY(0);
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-item-container {
-  padding: 32px 16px;
+  padding: 32px 0;
   border: 1px solid #e7e9fc;
   border-top: none;
+  align-items: center;
 }
 
 .portfolio-image {
@@ -370,13 +383,14 @@ p {
 .cover-wrap {
   position: relative;
   overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cover-text {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -384,7 +398,7 @@ p {
   background: #4d5ae5;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-subtitle {
@@ -433,7 +447,7 @@ p {
   max-width: 264px;
 }
 
-.footer-social-container {
+.footer-social {
   display: flex;
   align-items: baseline;
 }
