--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,7 @@ p {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hoover,
