--- a/css/styles.css
+++ b/css/styles.css
@@ -364,14 +364,19 @@ p {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .cover-wrap {
-  transform: translateY(0);
+.portfolio-item:hover {
   box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.portfolio-item:hover .cover-text {
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+
 .portfolio-item-container {
-  padding: 32px 0;
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
   align-items: center;
@@ -457,11 +462,11 @@ p {
 }
 
 .footer-social {
-  display: flex;
   align-items: baseline;
 }
 
 .footer-text-social {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -483,15 +488,15 @@ p {
   gap: 24px;
   width: 40px;
   height: 40px;
-  background-color: #4d5ae5;
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc-link:hoover,
-.footer-soc-link:focus {
+.footer-soc-link:hover,
+.footer-soc-lonk {
   background-color: #31d0aa;
 }
 
